# glance

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
exiftool/: Cargo.toml
exiftool/src/: lib.rs
glance-cli/: Cargo.toml
glance-cli/src/: main.rs
glance-dioxus/: Cargo.toml  Dioxus.toml  README.md
glance-dioxus/src/: main.rs
glance-egui/: Cargo.toml
glance-egui/src/: main.rs
glance-iced/: Cargo.toml
glance-iced/src/: main.rs
glance-lib/: Cargo.toml  test.db
glance-lib/src/: lib.rs
glance-lib/src/index/: hash_map_with_unknown.rs  label.rs  media.rs  mod.rs  tests.rs
glance-lib/src/index/snapshots/: glance_lib__index__tests__add_directory_test.snap  glance_lib__index__tests__add_label_test.snap
glance-lib/src/store/: converters.rs  label_sql.rs  media_sql.rs  mod.rs  tests.rs  util.rs
glance-ui/: Cargo.toml
glance-ui/src/: main.rs
glance-util/: Cargo.toml
glance-util/src/: canonicalized_path_buf.rs  lib.rs
scripts/: switch_media_prefix.py
