[package]
name = "glance-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.24"
eframe = "0.24"
egui_extras = { version = "0.24", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
glance-lib = {path = "../glance-lib"}