[package]
name = "glance-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.24"
eframe = "0.24"
egui_extras = { version = "0.24", features = ["all_loaders", "datepicker"] }
image = { version = "0.24", features = ["jpeg", "png"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
chrono = { version = "0.4", features = ["std"] }
glance-lib = {path = "../glance-lib"}
sloggers = "2"
slog = "2"
serde_json = "1"
rfd = "0.11"