[package]
name = "glance-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
const_format = "0.2"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
file-format = "0.23"
kamadak-exif = "0.5.5"
rusqlite = { version = "0.30", features = ["bundled", "time"] }
thiserror = "1"
time = {version = "0.3.30", features = ["parsing", "macros"] }
walkdir = "2"
