[package]
name = "glance-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
chrono = "0.4.31"
const_format = "0.2"
dateparser = "0.2.1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
file-format = "0.23"
kamadak-exif = "0.5.5"
rusqlite = { version = "0.30", features = ["bundled", "chrono", "backup"] }
thiserror = "1"
walkdir = "2"
reverse_geocoder = "4.0.0"

[dev-dependencies]
anyhow = "1"
insta = "1"
glance-util = {path = "../glance-util"}
