[package]
name = "glance-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["std"] }
const_format = "0.2"
dateparser = "0.2"
derive_more = { version = "2", features = ["full"] }
displaydoc = "0.2"
exiftool = { path = "../exiftool" }
file-format = "0.26"
glance-util = { path = "../glance-util" }
kamadak-exif = "0.6"
rusqlite = { version = "0.33", features = ["bundled", "chrono", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
slog = "2"
sloggers = "2"
thiserror = "2"
walkdir = "2"
reverse_geocoder = "4"

[dev-dependencies]
anyhow = "1"
insta = "1"
